solutions done features in progress 6.5

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,15 @@ img {
   }
 }
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1158px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 .section-header {
   font-weight: 700;
@@ -212,29 +219,30 @@ img {
 
 /* ----------------------------HEADER SECTION---------------------------- */
 /* ----------------------------BUTTON SECTION---------------------------- */
+/* ==========================mob adaptation========================== */
 .solutions {
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url("../images/desk-img/bg/hero-bg-desk-x1.jpg");
+    url("../images/mob-img/bg/hero-bg-mob-x1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1440px;
-  padding: 188px 0 188px;
+  max-width: 320px;
+  padding: 72px 0 72px;
   margin: 0 auto;
-  text-align: center;
 }
 .solutions-header {
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #fff;
-  margin-bottom: 48px;
-  max-width: 496px;
+  margin-bottom: 72px;
+  max-width: 216px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -260,26 +268,42 @@ img {
 .solutions-button:focus {
   background: #404bbf;
 }
-/* ----------------------------------------------------------------------------------------------- */
-/* FEATURES SECTION */
-.features-icon-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f4f4fd;
-  max-width: 264px;
-  height: 112px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  position: relative;
-  margin-bottom: 8px;
+/* ==========================tab adaptation========================== */
+@media screen and (min-width: 768px) {
+  .solutions {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/tab-img/bg/hero-bg-tab-x1.jpg");
+    max-width: 768px;
+    padding: 112px 0 112px;
+  }
+  .solutions-header {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+  }
 }
-.features-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+/* ==========================desktop adaptation========================== */
+@media screen and (min-width: 1158px) {
+  .solutions {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/desk-img/bg/hero-bg-desk-x1.jpg");
+    max-width: 1140px;
+    padding: 112px 0 112px;
+  }
+  .solutions-header {
+    margin-bottom: 48px;
+  }
 }
+/* ----------------------------BUTTON SECTION---------------------------- */
+/* ---------------------------FEATURES SECTION---------------------------- */
+/* ==========================mob adaptation========================== */
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -294,13 +318,65 @@ img {
 }
 .features-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-direction: column;
 }
-.features-list-item {
-  width: calc((100% - 3 * 24px) / 4);
+
+.features-icon-container {
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f4f4fd;
+  max-width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  position: relative;
+  margin-bottom: 8px; */
+  display: none;
 }
-/* ----------------------------------------------------------------------------------------------- */
-/* TEAM SECTION */
+.features-icon {
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  display: none;
+}
+.features-list-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.features-list-text {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  max-width: 288px;
+}
+
+/* ==========================tab adaptation========================== */
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+  .features-list-item {
+    width: calc((100% - 2 * 24px) / 3);
+  }
+}
+/* ==========================desktop adaptation========================== */
+@media screen and (min-width: 1158px) {
+}
+/* ---------------------------FEATURES SECTION---------------------------- */
+/* -----------------------------TEAM SECTION----------------------------- */
 .team-section {
   background: #f4f4fd;
 }
@@ -364,8 +440,8 @@ img {
 .team-icon-list-item-link:focus {
   background-color: #404bbf;
 }
-/* ----------------------------------------------------------------------------------------------- */
-/* PORTFOLIO SECTION */
+/* -----------------------------TEAM SECTION----------------------------- */
+/* ---------------------------PORTFOLIO SECTION---------------------------- */
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -425,7 +501,7 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
 }
-/* ----------------------------------------------------------------------------------------------- */
+/* ---------------------------PORTFOLIO SECTION---------------------------- */
 /* ----------------------------FOOTER SECTION---------------------------- */
 .footer {
   background-color: #2e2f42;
@@ -505,6 +581,7 @@ img {
 .footer-social-icon-link:focus {
   background-color: #31d0aa;
 }
+/* ----------------------------FOOTER SECTION---------------------------- */
 /* ----------------------------------------------------------------------------------------------- */
 .modal-overlay {
   position: fixed;
