--- a/css/styles.css
+++ b/css/styles.css
@@ -28,35 +28,18 @@ a {
 img {
   display: block;
   max-width: 100%;
-  /* height: auto; */
 }
 .container {
   max-width: 320px;
   margin: 0 auto;
   padding: 0 16px;
 }
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .container {
-    max-width: 1158px;
-    padding: 0 15px;
-  }
-}
+
 .section {
   padding-top: 96px;
   padding-bottom: 96px;
 }
 
-@media screen and (min-width: 1158px) {
-  .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
-}
 .section-header {
   font-weight: 700;
   font-size: 36px;
@@ -83,9 +66,9 @@ img {
   max-width: 264px;
   margin-top: 8px;
 }
-/* -----------------------------GLOBAL STYLES---------------------------- */
-/* ----------------------------320 BreakPoint---------------------------- */
-/* header sectoin */
+/* ==========================GLOBAL STYLES========================== */
+/* ==========================320 BreakPoint========================== */
+/* --------------------------header sectoin */
 .header-border {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -136,7 +119,7 @@ img {
 .logo-black:hover {
   color: #404bbf;
 }
-/* hero section */
+/* --------------------------hero section */
 .solutions {
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -185,7 +168,7 @@ img {
 .solutions-button:focus {
   background: #404bbf;
 }
-/* features section */
+/* --------------------------features section */
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -228,7 +211,7 @@ img {
   color: #434455;
   max-width: 100%;
 }
-/* team section */
+/* --------------------------team section */
 .team-section {
   background: #f4f4fd;
 }
@@ -292,7 +275,7 @@ img {
 .team-icon-list-item-link:focus {
   background-color: #404bbf;
 }
-/* portfolio section */
+/* --------------------------portfolio section */
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -352,7 +335,7 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
 }
-/* footer secion */
+/* --------------------------footer secion */
 .footer {
   background-color: #2e2f42;
   padding-top: 96px;
@@ -492,7 +475,7 @@ img {
   text-align: center;
   align-items: center;
 }
-/* modal-overlay */
+/* --------------------------modal-overlay */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -510,9 +493,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* width: 408px; */
   width: 288px;
-  /* min-height: 584px; */
   min-height: 623px;
   background: #fcfcfc;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -669,358 +650,7 @@ img {
   opacity: 1;
   pointer-events: auto;
 }
-/* dadadadad */
-@media screen and (min-width: 768px) {
-  .burger {
-    display: none;
-  }
-  .logo-blue {
-    margin-right: 120px;
-  }
-
-  .navigation-list {
-    display: flex;
-    gap: 40px;
-  }
-  .navigation-list-item {
-    color: #2e2f42;
-    position: relative;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    display: block;
-    padding: 24px 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .navigation-list-item:hover,
-  .navigation-list-item:focus {
-    color: #404bbf;
-  }
-  .current {
-    color: #404bbf;
-    position: relative;
-  }
-  .current::after {
-    content: "";
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-  }
-
-  .address {
-    font-style: normal;
-    margin-left: auto;
-    display: block;
-  }
-  .address-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-  .address-list-item {
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .address-list-item:hover,
-  .address-list-item:focus {
-    color: #404bbf;
-  }
-}
-/* ==========================desktop adaptation========================== */
-@media screen and (min-width: 1158px) {
-  .logo-blue {
-    margin-right: 76px;
-  }
-  .address-list {
-    flex-direction: row;
-    gap: 40px;
-  }
-  .address-list-item {
-    font-size: 16px;
-    line-height: 1.5;
-  }
-}
-
-/* ----------------------------HEADER SECTION---------------------------- */
-/* ----------------------------BUTTON SECTION---------------------------- */
-/* ==========================mob adaptation========================== */
-
-/* ==========================tab adaptation========================== */
-@media screen and (min-width: 768px) {
-  .solutions {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/tab-img/bg/hero-bg-tab-x1.jpg");
-    max-width: 768px;
-    padding: 112px 0 112px;
-  }
-  .solutions-header {
-    font-size: 56px;
-    line-height: 1.07;
-    max-width: 496px;
-    margin-bottom: 36px;
-  }
-}
-/* ==========================desktop adaptation========================== */
-@media screen and (min-width: 1158px) {
-  .solutions {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/desk-img/bg/hero-bg-desk-x1.jpg");
-    max-width: 1440px;
-    padding: 112px 0 112px;
-  }
-  .solutions-header {
-    margin-bottom: 48px;
-  }
-}
-/* ----------------------------BUTTON SECTION---------------------------- */
-/* ---------------------------FEATURES SECTION---------------------------- */
-/* ==========================mob adaptation========================== */
-
-/* ==========================tab adaptation========================== */
-@media screen and (min-width: 768px) {
-  .features-list {
-    gap: 24px;
-  }
-  .features-list-item {
-    width: calc((100% - 24px) / 2);
-  }
-  .features-list-header {
-    text-align: left;
-  }
-}
-/* ==========================desktop adaptation========================== */
-@media screen and (min-width: 1158px) {
-  .features-list {
-    flex-wrap: nowrap;
-  }
-  .features-icon-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f4f4fd;
-    max-width: 264px;
-    height: 112px;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    position: relative;
-    margin-bottom: 8px;
-  }
-  .features-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-  }
-  .features-list-header {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-  }
-  .features-list-text {
-    display: block;
-    font-weight: 400;
-  }
-}
-/* ---------------------------FEATURES SECTION---------------------------- */
-/* -----------------------------TEAM SECTION----------------------------- */
-
-/* ==========================tab adaptation========================== */
-@media screen and (min-width: 768px) {
-  .team-list {
-    display: flex;
-    flex-wrap: wrap;
-    /* gap: 24px; */
-    gap: 72px;
-    column-gap: 24px;
-    justify-content: center;
-  }
-}
-/* ==========================desktop adaptation========================== */
-@media screen and (min-width: 1158px) {
-}
-
-/* -----------------------------TEAM SECTION----------------------------- */
-/* ---------------------------PORTFOLIO SECTION---------------------------- */
-
-@media screen and (min-width: 768px) {
-  .portfolio-item-box {
-    width: 356px;
-    height: 300px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .portfolio-item-box {
-    width: 360px;
-    height: 300px;
-  }
-}
-
-/* ---------------------------PORTFOLIO SECTION---------------------------- */
-/* ----------------------------FOOTER SECTION---------------------------- */
-
-/* ----------------------------FOOTER SECTION---------------------------- */
-/* ----------------------------------------------------------------------------------------------- */
-
-@media screen and (min-width: 768px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* width: 408px; */
-    width: 408px;
-    /* min-height: 584px; */
-    min-height: 584px;
-    background: #fcfcfc;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-      0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
-    background: #fcfcfc;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-      0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
-  }
-}
-
-/* .input-checkbox-icon {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-/* ========================================================= */
-
-/* ==========================tab adaptation========================== */
-@media screen and (min-width: 768px) {
-  .footer-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 108px;
-    padding-right: 108px;
-    /* align-items: baseline; */
-  }
-  .footer-logo-text-container {
-    /* margin-right: 120px; */
-    margin-right: 24px;
-    margin-left: 0;
-  }
-  .logo-footer-blue {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    display: inline-block;
-    padding-left: 0;
-    padding-right: 0;
-
-    /* display: block; */
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: flex-start; */
-    /* flex-direction: row; */
-
-    /* margin-bottom: 16px; */
-    /* margin-left: 102px; */
-  }
-  .footer-media-icon-container {
-    margin: 0;
-    margin-bottom: 72px;
-  }
-  .footer-sub-text {
-    display: block;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 16px;
-    text-align: left;
-  }
-  .footer-form-container {
-    /* margin-left: 80px; */
-    margin: 0;
-    text-align: center;
-    align-items: center;
-  }
-  .footer-form-subtitle {
-    margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    text-align: left;
-  }
-}
-/* ==========================desktop adaptation========================== */
-@media screen and (min-width: 1158px) {
-  .footer {
-    background-color: #2e2f42;
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-  .footer-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 15px;
-    padding-right: 0;
-    /* align-items: baseline; */
-  }
-  .footer-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    margin-top: 16px;
-    margin-bottom: 0;
-    max-width: 264px;
-  }
-  .footer-logo-text-container {
-    margin-right: 120px;
-  }
-  .footer-media-icon-container {
-    margin: 0;
-    margin-bottom: 0;
-    margin-right: 80px;
-  }
-}
-/* =========================================================== */
-
-/* ---------------------------mob menu styles------------------------------------ */
+/* --------------------------mob menu styles */
 .mob-menu {
   position: fixed;
   top: 0;
@@ -1117,4 +747,297 @@ img {
 .mob-menu-is-open {
   opacity: 1;
   pointer-events: auto;
+}
+/* ==========================768 BreakPoint========================== */
+@media screen and (min-width: 768px) {
+  /* --------------------------header sectoin */
+  .container {
+    max-width: 768px;
+  }
+  .burger {
+    display: none;
+  }
+  .logo-blue {
+    margin-right: 120px;
+  }
+
+  .navigation-list {
+    display: flex;
+    gap: 40px;
+  }
+  .navigation-list-item {
+    color: #2e2f42;
+    position: relative;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    display: block;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .navigation-list-item:hover,
+  .navigation-list-item:focus {
+    color: #404bbf;
+  }
+  .current {
+    color: #404bbf;
+    position: relative;
+  }
+  .current::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
+
+  .address {
+    font-style: normal;
+    margin-left: auto;
+    display: block;
+  }
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  .address-list-item {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .address-list-item:hover,
+  .address-list-item:focus {
+    color: #404bbf;
+  }
+  /* --------------------------hero section */
+  .solutions {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/tab-img/bg/hero-bg-tab-x1.jpg");
+    max-width: 768px;
+    padding: 112px 0 112px;
+  }
+  .solutions-header {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+  }
+  /* --------------------------features section */
+  .features-list {
+    gap: 24px;
+  }
+  .features-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .features-list-header {
+    text-align: left;
+  }
+  /* --------------------------team section */
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+    column-gap: 24px;
+    justify-content: center;
+  }
+  /* --------------------------portfolio section */
+  .portfolio-item-box {
+    width: 356px;
+    height: 300px;
+  }
+  /* --------------------------footer section */
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 108px;
+    padding-right: 108px;
+  }
+  .footer-logo-text-container {
+    margin-right: 24px;
+    margin-left: 0;
+  }
+  .logo-footer-blue {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    display: inline-block;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .footer-media-icon-container {
+    margin: 0;
+    margin-bottom: 72px;
+  }
+  .footer-sub-text {
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+    text-align: left;
+  }
+  .footer-form-container {
+    margin: 0;
+    text-align: center;
+    align-items: center;
+  }
+  .footer-form-subtitle {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    text-align: left;
+  }
+  /* --------------------------modal-overlay */
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+      0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+  }
+}
+/* ==========================1158 BreakPoint========================== */
+@media screen and (min-width: 1158px) {
+  /* --------------------------header section */
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .logo-blue {
+    margin-right: 76px;
+  }
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .address-list-item {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  /* --------------------------hero secion */
+  .solutions {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/desk-img/bg/hero-bg-desk-x1.jpg");
+    max-width: 1440px;
+    padding: 112px 0 112px;
+  }
+  .solutions-header {
+    margin-bottom: 48px;
+  }
+  /* --------------------------features section */
+  .features-list {
+    flex-wrap: nowrap;
+  }
+  .features-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f4f4fd;
+    max-width: 264px;
+    height: 112px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    position: relative;
+    margin-bottom: 8px;
+  }
+  .features-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+  }
+  .features-list-header {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
+  .features-list-text {
+    display: block;
+    font-weight: 400;
+  }
+  /* --------------------------portfolio section */
+  .portfolio-item-box {
+    width: 360px;
+    height: 300px;
+  }
+  /* --------------------------footer section */
+  .footer {
+    background-color: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 15px;
+    padding-right: 0;
+  }
+  .footer-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    margin-top: 16px;
+    margin-bottom: 0;
+    max-width: 264px;
+  }
+  .footer-logo-text-container {
+    margin-right: 120px;
+  }
+  .footer-media-icon-container {
+    margin: 0;
+    margin-bottom: 0;
+    margin-right: 80px;
+  }
+  /* --------------------------modal-overlay */
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+      0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+  }
 }
