--- a/css/styles.css
+++ b/css/styles.css
@@ -287,8 +287,6 @@ img {
 }
 .portfolio-item-box {
   position: relative;
-  width: 288px;
-  height: 280px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -500,7 +498,7 @@ img {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
 }
 .form-exit-decor {
   position: absolute;
@@ -582,15 +580,22 @@ img {
 }
 .checkbox-container {
   margin-bottom: 24px;
+  margin-left: 24px;
 }
-
 .checkbox-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  display: flex;
+  flex-wrap: wrap;
+  width: 231px;
+  position: relative;
 }
 .checkbox-label-span {
+  position: absolute;
+  top: 0%;
+  left: -10%;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -602,6 +607,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-top: 5px;
 }
 .checkbox-privacy-link {
   color: #4d5ae5;
@@ -641,12 +647,35 @@ img {
 .form-textarea:focus {
   border-color: #4d5ae5;
 }
+
 .costom-checkbox-input:checked + .checkbox-label span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
+
 .modal-overlay-is-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+  pointer-events: auto;
+}
+.mob-menu-is-open {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 999;
   opacity: 1;
   pointer-events: auto;
 }
@@ -657,20 +686,28 @@ img {
   background-color: #fff;
   width: 100%;
   height: 100%;
-  padding: 24px 24px 40px 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 999;
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+.mob-menu-upper {
+  padding-right: 24px;
+  padding-top: 24px;
+  padding-left: 16px;
+}
+.mob-menu-lower {
+  padding-right: 24px;
+  padding-bottom: 40px;
 }
 .mob-menu-button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
   display: block;
   margin-left: auto;
-  margin-bottom: 24px;
   border-radius: 50%;
   cursor: pointer;
   padding: 8;
@@ -705,6 +742,7 @@ img {
   flex-direction: column-reverse;
   gap: 24px;
   padding-bottom: 48px;
+  padding-left: 16px;
 }
 .mob-address-list-item {
   font-weight: 500;
@@ -754,6 +792,12 @@ img {
     max-width: 768px;
   }
   .burger {
+    display: none;
+  }
+  .mob-menu {
+    display: none;
+  }
+  .mob-menu-is-open {
     display: none;
   }
   .logo-blue {
@@ -851,10 +895,7 @@ img {
     justify-content: center;
   }
   /* --------------------------portfolio section */
-  .portfolio-item-box {
-    width: 356px;
-    height: 300px;
-  }
+
   /* --------------------------footer section */
   .footer-container {
     display: flex;
@@ -920,6 +961,38 @@ img {
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
+  }
+  .checkbox-container {
+    margin-bottom: 24px;
+    margin-left: 0px;
+  }
+  .checkbox-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: flex;
+    flex-wrap: wrap;
+    width: 362px;
+    position: relative;
+  }
+  .checkbox-label-span {
+    position: relative;
+    top: 0%;
+    left: 0%;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-top: 0px;
+    margin-right: 8px;
   }
 }
 /* ==========================1158 BreakPoint========================== */
@@ -991,10 +1064,7 @@ img {
     font-weight: 400;
   }
   /* --------------------------portfolio section */
-  .portfolio-item-box {
-    width: 360px;
-    height: 300px;
-  }
+
   /* --------------------------footer section */
   .footer {
     background-color: #2e2f42;
